Change background color to White and HOPEFULLY fix alignment issues with windows OS

--- a/frontend/stylesheets/css-reset.css
+++ b/frontend/stylesheets/css-reset.css
@@ -25,7 +25,7 @@ time, mark, audio, video, button {
 }
 
 body {
-	background-color: aliceblue;
+	/* background-color: aliceblue; */
 }
 
 html, body, div, span, applet, object, iframe,
