--- a/frontend/stylesheets/sign-up.css
+++ b/frontend/stylesheets/sign-up.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    height: 55px;
+    height: 9vh;
 }
 
 .signup-header h2 {
@@ -16,14 +16,16 @@
     display: flex;
     flex-direction: column;
     margin-top: 20px;
-    height: 270px;
-    width: 750px;
+    height: 43vh;
+    width: 60vw;
 }
 
 .main-signup-form {
     /* border: 1px solid blue; */
     display: flex;
-    height: 185px;
+    width: 60vw;
+    height: 30vh;
+    color: #3D5A80;
 }
 
 .main-signup-form label {
@@ -32,7 +34,7 @@
 }
 
 .main-signup-form input {
-    padding: 7px;
+    padding: 7px 0 7px 0;
     font-size: 16px;
 }
 
@@ -44,11 +46,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: flex-end;
+    width: 30vw;
 }
 
-.left-signup-form input {
-    margin-right: 20px;
-}
 
 .right-signup-form {
     /* border: 1px solid red; */
@@ -58,12 +58,13 @@
     justify-content: center;
     align-items: center;   
     padding: 6px; 
+    width: 40vw;
 }
 
-#signup-dob {
-    padding: 4px;
-    margin-left: 40px;
-    width: 161px;
+.right-signup-form #signup-dob {
+    margin-left: 3vw;
+    height: 5.5vh;
+    width: 11.5vw;
     font-size: 15px;
     text-align: center;
 }
@@ -92,38 +93,41 @@
 /* Doctor Signup Specific Styling */
 
 .doctor-signup-container {
+    /* border: 1px solid black; */
     display: flex;
     flex-direction: column;
     margin-top: 20px;
-    height: 270px;
-    width: 600px;
+    height: 44vh;
+    width: 50vw;
 }
 
-.doctor-left-signup {
+.doctor-signup-container .doctor-left-signup {
+    /* border: 1px solid black; */
     display: flex;
-    flex-grow: 1;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     align-items: flex-end;
-    padding: 10px 0px 10px 0px;
+    width: 25vw;
 }
 
-.doctor-left-signup input {
+.doctor-signup-container .doctor-left-signup input {
     margin-right: 20px;
 }
 
-.doctor-right-signup {
+.doctor-signup-container .doctor-right-signup {
+    /* border: 1px solid black; */
     display: flex;
-    flex-grow: 3;
     flex-direction: column;
-    justify-content: space-between;
-    align-items: flex-end;
-    padding: 5px 30px 5px 0;
+    justify-content: center;
+    align-items: flex-end;   
+    padding: 6px; 
+    width: 23vw;
 }
 
-#doctor-dob {
+.doctor-signup-container #doctor-dob {
     padding: 4px;
-    width: 161px;
-    font-size: 15px;
+    height: 5.5vh;
+    width: 11.5vw;
+    font-size: 13px;
     text-align: center;
 }
